--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,7 +1,13 @@
-body {
-  padding: 40px;
+html,
+body,
+#root {
+  min-height: 100vh;
 }
 
 .App {
+  padding-top: 40px;
+  padding-bottom: 40px;
   text-align: center;
+  background-color: rgb(231, 231, 231);
+  min-height: 100vh;
 }
